cluster/apps/networking/traefik/ws.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-ws-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "http"
