cluster/apps/networking/traefik/wss.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-wss-headers
  namespace: networking
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
